Wed Sep 05 14:24:52 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS,README,build.py,secore/,xappy/__init__.py: Rename secore
	  to xappy.  Adjust accompanying scripts and documentation
	  accordingly.

Wed Sep 05 02:23:46 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection_doctest2.txt: Change expected output to
	  match output given by xapian SVN HEAD, once the bug in
	  check_at_least is resolved.

Fri Aug 17 14:41:13 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/index_from_dump.py: Remove pointless "os.stat"

Fri Aug 17 14:38:46 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/indexerconnection.py: Add a method to get a list of the
	  fields which have actions defined.

Thu Aug 16 17:42:30 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/indexerconnection.py: Add a check for the database not
	  having been closed.
	* secore/searchconnection.py: Add method for getting an iterator
	  over all the documents in the database.  Add support for
	  rerunning the attempted access if get_document() catches a
	  DatabaseModifiedError.
	* secore/searchconnection_doctest2.txt: Change
	  "get_significant_terms" to "significant_terms()", and test it.

Thu Aug 16 17:24:06 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py,secore/searchconnection_doctest2.txt:
	  Add new method "get_significant_terms()" which returns the most
	  significant terms in the set of ids specified.

Thu Aug 16 10:22:16 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection_doctest2.txt: Add test for supplying a
	  document ID to query_similar() which isn't in the database.

Thu Aug 16 09:49:09 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Add documentation for similarity search.

Thu Aug 16 09:15:44 BST 2007  Richard Boulton <richard@lemurconsulting.com>
