@@ -1,0 +1,32 @@
+#!/usr/bin/env python
+#
+# Copyright (C) 2007 Lemur Consulting Ltd
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License along
+# with this program; if not, write to the Free Software Foundation, Inc.,
+# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+"""Compatibility wrapper for Xappy.
+
+Xappy used to be called "secore".  To assist in migration to secore, this
+simple compatibility wrapper is provided, which allows existing code which use:
+
+>>> import secore
+
+to work without changes.  References to the "secore" name should be changed to
+"xappy" whenever possible, however, since this compatibility wrapper will be
+removed at some point.
+
+"""
+__docformat__ = "restructuredtext en"
+
+from xappy import *
