@@ -1,3 +1,10 @@
+Wed Sep 05 15:05:57 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* secore/,testsuite/runtests.py: Add compatibility layer so that
+	  old scripts can run without needing to change from "secore" to
+	  "xappy", for now.  Change testsuite to run using new names (but
+	  use the old ones too, to test the compatibility layer).
+
 Wed Sep 05 14:24:52 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* AUTHORS,README,build.py,secore/,xappy/__init__.py: Rename secore
